--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body onload="createMaze()">
@@ -20,7 +21,7 @@
         <img src="rat.png" id="rat" width="50px" height="50px" alt="rat">
         <img src="food.png" id="food" alt="food" width="50px" height="50px">
     </div>
+    
+    <script src="script.js"></script>
 </body>
-
-
 </html>
